# data-science-repo-template

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  settings.json
